--- a/key-adjust.html
+++ b/key-adjust.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="keyAdjustContainer container">
       <h1>音域調整<br />シミュレーション</h1>
 
       <section>
@@ -121,3 +121,4 @@
     </script>
   </body>
 </html>
+
