--- a/key-adjust.html
+++ b/key-adjust.html
@@ -23,14 +23,18 @@
   </head>
   <body>
     <div class="keyAdjustContainer container">
-      <h1>音域調整<br />シミュレーション</h1>
+      <h1>KaraokeTuneUp</h1>
 
       <section>
         <!-- 歌いたい曲 -->
         <section id="targetSection">
-          <div class="form-group">
-            <label for="targetArtist">アーティスト名で絞り込み：</label>
-            <select id="targetArtist"></select>
+          <div class="accordion">
+            <div class="accordion-header">アーティスト名で絞り込み ▼</div>
+            <div class="accordion-content">
+              <div class="form-group">
+                <select id="targetArtist"></select>
+              </div>
+            </div>
           </div>
 
           <div class="form-group">
@@ -46,9 +50,13 @@
 
         <!-- 歌える曲 -->
         <section id="referenceSection">
-          <div class="form-group">
-            <label for="referenceArtist">アーティスト名で絞り込み：</label>
-            <select id="referenceArtist"></select>
+          <div class="accordion">
+            <div class="accordion-header">アーティスト名で絞り込み ▼</div>
+            <div class="accordion-content">
+              <div class="form-group">
+                <select id="referenceArtist"></select>
+              </div>
+            </div>
           </div>
 
           <div class="form-group">
@@ -103,12 +111,12 @@
       </div>
 
       <div class="bottomNav bottomNavBottom">
-        <button class="nav-item" data-href="index.html">音域類似曲検索</button>
+        <button class="nav-item" data-href="index.html">TuneFinder</button>
         <!-- <button class="nav-item" data-href="search-key-range.html">
         キー範囲検索
       </button> -->
         <button class="nav-item" data-href="key-adjust.html">
-          音域調整<br />シミュレーション
+          KaraokeTuneUp
         </button>
       </div>
     </div>
@@ -121,4 +129,3 @@
     </script>
   </body>
 </html>
-
