--- a/key-adjust.html
+++ b/key-adjust.html
@@ -133,23 +133,18 @@
       </div>
 
       <div class="bottomNav bottomNavBottom">
-        <button class="nav-item" data-href="index.html">TuneFinder</button>
-        <!-- <button class="nav-item" data-href="search-key-range.html">
+        <button class="nav-item" data-href="index">TuneFinder</button>
+        <!-- <button class="nav-item" data-href="search-key-range">
         キー範囲検索
       </button> -->
-        <button class="nav-item" data-href="key-adjust.html">
-          KaraokeTune
-        </button>
-        <button class="nav-item" data-href="utaite-tune.html">
-          UtaiteTune
-        </button>
+        <button class="nav-item" data-href="key-adjust">KaraokeTune</button>
+        <button class="nav-item" data-href="utaite-tune">UtaiteTune</button>
       </div>
     </div>
 
     <!-- 説明モーダル -->
     <div id="helpModal" class="modal">
       <div class="modal-content">
-        <span id="closeModal" class="close">&times;</span>
         <div class="modalTitle">
           <h2>🎵 歌いやすいキーを見つけよう</h2>
         </div>
@@ -192,6 +187,7 @@
               <p>お使いのブラウザは動画に対応していません。</p>
             </video>
           </div>
+          <span id="closeModal" class="close">&times;</span>
         </div>
       </div>
     </div>
